<resources>
    <string name="app_name">NumberGame</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="number_composite">Склад числа</string>
    <string name="understandably">Зрозуміло</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. \nНеобходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней
        фигуре,для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7,
        в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака
        должно быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="test">Тестовий</string>
    <string name="choose_level">Виберіть рівень</string>
    <string name="easy">Легкий</string>
    <string name="normal">Середній</string>
    <string name="hard">Складний</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильних відповідей %s (мінімум %s)</string>
    <string name="try_again">Спробувати знову</string>
    <string name="game_over">Game Over</string>
    <string name="necessary_right_answer">Необхідна кількість правильних відповідей: %s</string>
    <string name="necessary_percent_right_answer">Необхідний процент правильних відповідей: %s</string>
    <string name="your_score">Ваш рахунок: %s</string>
    <string name="percentage_right_answers">Процент правильних відповідей: %s</string>
</resources>