<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.GameFinishedFragment">

    <ImageView
        android:id="@+id/iv_emoji_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_large_48"
        android:contentDescription="@string/game_over"
        app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_smile" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_normal_16"
        android:layout_marginVertical="@dimen/spacing_small_8"
        android:text="@string/necessary_right_answer"
        android:textSize="@dimen/font_result_field_18"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_small_8"
        android:text="@string/your_score"
        android:textSize="@dimen/font_result_field_18"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers" />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_small_8"
        android:text="@string/necessary_right_answer"
        android:textSize="@dimen/font_result_field_18"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_small_8"
        android:text="@string/percentage_right_answers"
        android:textSize="@dimen/font_result_field_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

